# data-structures

./: .gitmodules  package-lock.json
Algorithms/BTBFS/: BTBFS.test.ts  BTBFS.ts
Algorithms/BTComprarison/: BTComparison.test.ts  BTComparison.ts
Algorithms/BTDFS/: BTDFS.test.ts  BTDFS.ts
Algorithms/BinarySearch/: BinarySearch.test.ts  BinarySearch.ts
Algorithms/BubbleSort/: BubbleSort.test.ts  BubbleSort.ts
Algorithms/CrystalBalls/: CrystallBalls.test.ts  CrystallBalls.ts
Algorithms/GraphBFS/: GraphBFS.test.ts
Algorithms/GraphDFS/: GraphDFS.test.ts
Algorithms/LinearSearch/: LinearSearch.test.ts  LinearSearch.ts
Algorithms/MazeSolver/: MazeSolver.test.ts  MazeSolver.ts
Algorithms/QuickSort/: QuickSort.test.ts  QuickSort.ts
C/: CMakeLists.txt
C++/: CMakeLists.txt  moreTests.cpp  mytests.cpp
C++/src/: myfunctions.cpp
C++/src/algorithms/binary-search/: binary-search-tests.cpp  binary-search.cpp  binary-search.h  binary-search.hpp  binary-search.tests.cpp
C++/src/algorithms/bt-bfs/: bt-bfs-tests.cpp  bt-bfs.h  bt-bfs.hpp  bt-bfs.tests.cpp  bt-bfs.tpp
C++/src/algorithms/bt-dfs/: bt-dfs-tests.cpp  bt-dfs.h  bt-dfs.hpp  bt-dfs.tests.cpp  bt-dfs.tpp
C++/src/algorithms/bubble-sort/: bubble-sort-tests.cpp  bubble-sort.cpp  bubble-sort.h  bubble-sort.hpp  bubble-sort.tests.cpp
C++/src/algorithms/bubble_sort/: bubble_sort.cpp  bubble_sort.h  bubble_sort.tests.cpp
C++/src/algorithms/insertion-sort/: insertion-sort-tests.cpp  insertion-sort.cpp  insertion-sort.hpp  insertion-sort.tests.cpp
C++/src/algorithms/linear-search/: linear-search-tests.cpp  linear-search.cpp  linear-search.h  linear-search.hpp  linear-search.tests.cpp
C++/src/algorithms/merge-sort/: merge-sort-tests.cpp  merge-sort.cpp  merge-sort.h  merge-sort.hpp  merge-sort.tests.cpp
C++/src/algorithms/selection-sort/: selection-sort-tests.cpp  selection-sort.cpp  selection-sort.h  selection-sort.hpp  selection-sort.tests.cpp
C++/src/data-structures/binary-tree/: binary-tree-node.h  binary-tree-node.hpp  binary-tree-tests.cpp  binary-tree.h  binary-tree.hpp  binary-tree.tests.cpp  binary-tree.tpp
C++/src/data-structures/linked-list/: linked-list-node.h  linked-list-node.hpp  linked-list-tests.cpp  linked-list.h  linked-list.hpp  linked-list.tests.cpp  linked-list.tpp
C++/src/data-structures/min-heap/: min-heap-tests.cpp  min-heap.cpp  min-heap.h  min-heap.hpp  min-heap.tests.cpp
C++/src/data-structures/queue/: queue-node.h  queue-node.hpp  queue-tests.cpp  queue.h  queue.hpp  queue.tests.cpp  queue.tpp
C++/src/data-structures/stack/: stack-node.h  stack-node.hpp  stack-tests.cpp  stack.h  stack.hpp  stack.tests.cpp  stack.tpp
C++/src/utils/: array-utils.cpp  array-utils.h  testing-utils.cpp  testing-utils.h  testing-utils.hpp  testing-utils.tpp
C/src/algorithms/binary-search/: binary-search.c  binary-search.h
C/src/algorithms/bubble-sort/: bubble-sort.c  bubble-sort.h
C/src/algorithms/insertion-sort/: insertion-sort.c  insertion-sort.h
C/src/algorithms/linear-search/: linear-search.c  linear-search.h
C/src/algorithms/quick-sort/: quick-sort.c  quick-sort.h
C/src/data-structures/binary-tree/: binary-tree.c  binary-tree.h
C/src/data-structures/linked-list/: linked-list.c  linked-list.h
C/src/data-structures/queue/: queue.c  queue.h
C/src/data-structures/stack/: stack.c  stack.h
C/src/noob-stuff/: 1-to-c-or-not-to-c.h  10-number-limits.h  10-types-limits.h  11-message-length.h  12-reversing-numbers.h  13-repeated-digits.h  14-interest-rates.h  15-hand-of-cards.h  16-guess-the-number.h  17-digit-display.h  18-preprocessor-trash.h  19-parts-database.h  2-largest-numbers.h  3-shipping-boxes.h  4-to-celsius.h  5-upc-check-digit.h  6-broker-commision.h  7-legal-date-format.h  8-table-of-squares.h  9-number-of-digits.h  c-or-not-to-c.c  main.c  main.h  to-c-or-not-to-c.c
C/test/: CMakeLists.txt
C/test/src/: linear-search.tests.c  main.tests.c  unity-include.tests.h
C/test/src/algorithms/: binary-search.tests.h  bubble-sort.tests.h  insertion-sort.tests.h  linear-search.tests.h  quick-sort.tests.h
C/test/src/data-structures/: stack.tests.h
C/test/src/data-structures/binary-tree/: binary-tree.tests.c  binary-tree.tests.h
C/test/src/data-structures/linked-list/: linked-list.tests.c  linked-list.tests.h
C/test/src/data-structures/queue/: queue.tests.c  queue.tests.h
C/test/src/data-structures/stack/: stack.tests.c  stack.tests.h
CSharp/: .gitignore  CSharp.csproj  CSharp.sln  UnitTest1.cs
CSharp/Algorithms/BinarySearch/: BinarySearch.Tests.cs  BinarySearch.cs
CSharp/Algorithms/BubbleSort/: BubbleSort.Tests.cs  BubbleSort.cs
CSharp/Algorithms/LinearSearch/: LinearSearch.Tests.cs  LinearSearch.cs  LinearSearchTests.cs
CSharp/Algorithms/MergeSort/: MergeSort.Tests.cs  MergeSort.cs
CSharp/Algorithms/QuickSort/: QuickSort.Tests.cs  QuickSort.cs
CSharp/DataStructures/LinkedList/: LinkedList.Tests.cs  LinkedList.cs
CSharp/DataStructures/Queue/: Queue.Tests.cs  Queue.cs
CSharp/DataStructures/Stack/: Stack.Tests.cs  Stack.cs
DataStructures/BinaryTree/: BinaryTree.test.ts  BinaryTree.ts  BinaryTreeOrder.test.ts  BinaryTreeOrder.ts  Tree.ts
DataStructures/Graph/: Graph.ts
DataStructures/Heap/: Heap.test.ts  Heap.ts
DataStructures/LinkedList/: LinkedList.test.ts  LinkedList.ts
DataStructures/Queue/: Queue.test.ts  Queue.ts
DataStructures/Stack/: Stack.test.ts  Stack.ts
Typescript/: package.json
Typescript/Algorithms/BTComprarison/: BTComparison.test.ts
Typescript/Algorithms/BTDFS/: BTDFS.test.ts  BTDFS.ts
Typescript/Algorithms/BinarySearch/: BinarySearch.test.ts
Typescript/Algorithms/BubbleSort/: BubbleSort.test.ts  BubbleSort.ts
Typescript/Algorithms/GraphBFS/: GraphBFS.test.ts  GraphBFS.ts
Typescript/Algorithms/GraphDFS/: GraphDFS.ts
Typescript/DataStructures/LRU/: LRU.ts  (+1 more)
(+10 files in other folders)
